--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "image-summarization-mcp",
+  "name": "@jettoblack/image_mcp",
   "version": "1.0.0",
   "description": "MCP server for image summarization using OpenAI-compatible chat completion endpoints",
   "main": "build/index.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jettoblack/image_mcp.git"
+  },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "dev": "tsx watch src/index.ts",
@@ -15,6 +19,9 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit"
   },
+  "bin": {
+    "image_mcp": "build/index.js"
+  },
   "keywords": [
     "mcp",
     "server",
@@ -25,7 +32,7 @@
     "completion",
     "vision"
   ],
-  "author": "",
+  "author": "jettoblack",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.5",
